# NEMSlite

./: .gitmodules  CMakeLists.txt  README.md  build.sh
NEMS/src/: CMakeLists.txt
